...
                            <constraint firstItem="PwQ-cn-VDr" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="cyN-Ya-W0T"/>
                            <constraint firstItem="PwQ-cn-VDr" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="iqY-q7-D42"/>
                            <constraint firstItem="PwQ-cn-VDr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="uEF-5J-Acl"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="List" id="hEm-Em-6dP">
                        <barButtonItem key="rightBarButtonItem" systemItem="organize" id="pnX-2L-ZDZ">
                            <connections>
                                <segue destination="TRS-CL-APa" kind="show" id="2fo-rd-AkF"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
            </objects>
            <point key="canvasLocation" x="1849" y="-695"/>
        </scene>
        <!--Detail-->
        <scene sceneID="UPH-Ze-WgI">
            <objects>
                <viewController title="Detail" id="Uqk-xz-ywv" customClass="DetailViewController" customModule="ContactList" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="bbv-Fv-cLB">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="Ji8-S7-c3m">
                                <rect key="frame" x="112.5" y="114" width="150" height="150"/>
...
